--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "axios-cookiejar-support": "^0.3.5",
     "csv-parse": "^2.4.0",
     "form-data": "^2.3.2",
     "fs-extra": "^6.0.1",
